--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" 
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
-    xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
-
+<web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
     <!-- Declare Servlets -->
     <servlet>
         <servlet-name>ChangePasswordController</servlet-name>
@@ -57,10 +54,6 @@
         <servlet-class>controller.UserProfileController</servlet-class>
     </servlet>
     <servlet>
-        <servlet-name>UpdateUserProfileController</servlet-name>
-        <servlet-class>controller.UpdateUserProfileController</servlet-class>
-    </servlet>
-    <servlet>
         <servlet-name>CourseDetailController</servlet-name>
         <servlet-class>controller.CourseDetailController</servlet-class>
     </servlet>
@@ -100,8 +93,11 @@
         <servlet-name>CourseAnalysisServlet</servlet-name>
         <servlet-class>controller.CourseAnalysisServlet</servlet-class>
     </servlet>
-
     <!-- Declare Mappings -->
+    <servlet>
+        <servlet-name>UpdateUserProfile</servlet-name>
+        <servlet-class>controller.UpdateUserProfileController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>ChangePasswordController</servlet-name>
         <url-pattern>/changePassword</url-pattern>
@@ -133,10 +129,6 @@
     <servlet-mapping>
         <servlet-name>UserProfileController</servlet-name>
         <url-pattern>/UserProfile</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>UpdateUserProfileController</servlet-name>
-        <url-pattern>/UpdateUserProfile</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>CourseDetailController</servlet-name>
@@ -190,20 +182,21 @@
         <servlet-name>CourseAnalysisServlet</servlet-name>
         <url-pattern>/CourseAnalysis</url-pattern>
     </servlet-mapping>
-
     <!-- Declare Authorization Filter -->
     <filter>
         <filter-name>AuthorizationFilter</filter-name>
         <filter-class>filter.AuthorizationFilter</filter-class>
     </filter>
-
     <!-- Map Authorization Filter -->
     <filter-mapping>
         <filter-name>AuthorizationFilter</filter-name>
         <url-pattern>/admin/*</url-pattern>
     </filter-mapping>
-
     <!-- Session Configuration -->
+    <servlet-mapping>
+        <servlet-name>UpdateUserProfile</servlet-name>
+        <url-pattern>/UpdateUserProfile</url-pattern>
+    </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
     </session-config>
