--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,64 +1,7 @@
-deploy.ant.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1_Tomcat10.1
-j2ee.server.instance=tomcat101:home=D:\\Tomcat
-javac.debug=true
-javadoc.preview=true
-selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\Admin\\AppData\\Roaming\\NetBeans\\17\\build.properties
-deploy.ant.properties.file=C:\\Users\\84941\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-file.reference.activation.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\swp391_onlinelearning\\web\\lib\\javax.activation-1.2.0.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\swp391_onlinelearning\\web\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\swp391_onlinelearning\\web\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-j2ee.server.home=D:/Data System/Apache Software Foundation/Tomcat 10.1
-j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1
-javac.debug=true
-javadoc.preview=true
-selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\84941\\AppData\\Roaming\\NetBeans\\17\\build.properties
-deploy.ant.properties.file=C:\\Users\\HI\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=D:/Tomcat10.23
-j2ee.server.instance=tomcat101:home=D:\\Tomcat10.23
-javac.debug=true
-javadoc.preview=true
-selected.browser=default
-user.properties.file=C:\\Users\\HI\\AppData\\Roaming\\NetBeans\\17\\build.properties
 deploy.ant.properties.file=C:\\Users\\mocun\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
 
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1_Tomcat10.1
-j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1_Tomcat10.1
-javac.debug=true
-javadoc.preview=true
-selected.browser=default
-user.properties.file=C:\\Users\\mocun\\AppData\\Roaming\\NetBeans\\17\\build.properties
-
-deploy.ant.properties.file=C:\\Users\\vungu\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=D:/Data System/Apache Software Foundation/Tomcat 10.1
-j2ee.server.instance=tomcat101:home=D:\\Data System\\Apache Software Foundation\\Tomcat 10.1
-javac.debug=true
-javadoc.preview=true
-selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\vungu\\AppData\\Roaming\\NetBeans\\17\\build.properties
-deploy.ant.properties.file=C:\\Users\\HI\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=D:/Tomcat10.23
-j2ee.server.instance=tomcat101:home=D:\\Tomcat10.23
-javac.debug=true
-javadoc.preview=true
-selected.browser=default
-user.properties.file=C:\\Users\\HI\\AppData\\Roaming\\NetBeans\\17\\build.properties
-deploy.ant.properties.file=C:\\Users\\mocun\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-
-j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1_Tomcat10.1
-j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1_Tomcat10.1
-javac.debug=true
-javadoc.preview=true
-selected.browser=default
-user.properties.file=C:\\Users\\mocun\\AppData\\Roaming\\NetBeans\\17\\build.properties
-
-deploy.ant.properties.file=C:\\Users\\vungu\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-
-<<<<<<< HEAD
 file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
+file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\lib\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\lib\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.jaxb-api-2.1.jar=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\lib\\lib\\jaxb-api-2.1.jar
@@ -66,26 +9,8 @@ file.reference.lombok-1.18.24.jar=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391
 file.reference.sqljdbc42.jar=D:\\Hoc\\ki 8\\swp391\\Online_Learning\\swp391_onlinelearning\\lib\\lib\\sqljdbc42.jar
 j2ee.server.home=C:/Program Files/Apache Software Foundation/Tomcat 10.1_Tomcat10.1
 j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1_Tomcat10.1
-=======
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\Branch\\Tuan-swp391_onlinelearning\\web\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar-1=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\Branch\\Tuan-swp391_onlinelearning\\web\\lib\\jakarta.servlet.jsp.jstl-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\Branch\\Tuan-swp391_onlinelearning\\web\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar-1=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\Branch\\Tuan-swp391_onlinelearning\\web\\lib\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
-file.reference.jaxb-api-2.1.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\Branch\\Tuan-swp391_onlinelearning\\web\\lib\\jaxb-api-2.1.jar
-file.reference.lombok-1.18.24.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\Branch\\Tuan-swp391_onlinelearning\\web\\lib\\lombok-1.18.24.jar
-file.reference.sqljdbc42.jar=D:\\Anh Vu Nguyen\\FPT_University\\Semester 5\\SWP391\\Project_SWP\\Branch\\Tuan-swp391_onlinelearning\\web\\lib\\sqljdbc42.jar
-j2ee.server.home=D:/Data System/Apache Software Foundation/Tomcat 10.1
-j2ee.server.instance=tomcat101:home=D:\\Data System\\Apache Software Foundation\\Tomcat 10.1
->>>>>>> bd09cb7e7413942dd1a96938e63b52037406ccb1
-javac.debug=true
-javadoc.preview=true
-selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\vungu\\AppData\\Roaming\\NetBeans\\17\\build.properties
-
-deploy.ant.properties.file=C:\\Users\\mocun\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
-j2ee.server.home=D:/Data System/Apache Software Foundation/Tomcat 10.1
-j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\Tomcat 10.1_Tomcat10.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
 user.properties.file=C:\\Users\\mocun\\AppData\\Roaming\\NetBeans\\17\\build.properties
+
