--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -115,10 +115,6 @@
         <url-pattern>/LessonVideo</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
-        <servlet-name>UserDashboardController</servlet-name>
-        <url-pattern>/UserDashboard</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
         <servlet-name>SettingDashboardController</servlet-name>
         <url-pattern>/SettingDashboard</url-pattern>
     </servlet-mapping>
@@ -141,10 +137,6 @@
     <servlet-mapping>
         <servlet-name>BlogListServlet</servlet-name>
         <url-pattern>/blogList</url-pattern>
-    </servlet-mapping>
-    <servlet-mapping>
-        <servlet-name>UserDashboardController</servlet-name>
-        <url-pattern>/UserDashboardController</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>SettingDashboardController</servlet-name>
@@ -190,12 +182,17 @@
     <!-- Map Authorization Filter -->
     <filter-mapping>
         <filter-name>AuthorizationFilter</filter-name>
-        <url-pattern>/admin/*</url-pattern>
+        <url-pattern>/*</url-pattern>
     </filter-mapping>
     <!-- Session Configuration -->
     <servlet-mapping>
         <servlet-name>UpdateUserProfile</servlet-name>
         <url-pattern>/UpdateUserProfile</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>UserDashboardController</servlet-name>
+        <url-pattern>/UserDashboard</url-pattern>
+        <url-pattern>/UserDashboardController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>30</session-timeout>
